Support UNIX domain socket

--- a/examples/simple.conf
+++ b/examples/simple.conf
@@ -1,6 +1,18 @@
+<system>
+  workers 4
+</system>
+
 <source>
   @type forward
+  bind 127.0.0.1
 </source>
+
+<worker 0>
+  <source>
+    @type unix
+    path ./fluentd.sock
+  </source>
+</worker>
 
 <match test.*>
   @type null
