--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,13 +7,16 @@ edition = "2021"
 
 [dependencies]
 async-trait = "0.1"
+base64 = "0.13"
 bytes = { version = "1", features = ["serde"] }
 chrono = "0.4"
 rmp-serde = "0.15"
-serde = "1"
+serde = { version = "1", features = ["derive"] }
 thiserror = "1"
-tokio = { version = "1", features = ["net", "sync", "time"] }
+tokio = { version = "1", features = ["io-util", "net", "sync", "time"] }
+tracing = "0.1"
+uuid = { version = "0.8", features = ["v4"] }
 
 [dev-dependencies]
 tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
-serde = { version = "1", features = ["derive"] }
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
