--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,10 @@
 name = "tokio-fluent-logger"
 version = "0.1.0"
 edition = "2021"
+description = "A structured event logger for Fluentd based on Tokio runtime"
+readme = "README.md"
+repository = "https://github.com/eagletmt/tokio-fluent-logger"
+license = "MIT"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
