--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,10 +14,16 @@ jobs:
         with:
           profile: minimal
           toolchain: stable
+      - name: Setup for integration test
+        run: docker compose --file tests/docker-compose.yml up --detach
       - name: Run cargo test
         uses: actions-rs/cargo@v1
         with:
           command: test
+      - name: Teardown for integration test
+        run: |
+          docker compose --file tests/docker-compose.yml logs
+          docker compose --file tests/docker-compose.yml down
   lint:
     name: Run lint
     runs-on: ubuntu-latest
